--- a/src/app/(main)/home/_split/style.module.css
+++ b/src/app/(main)/home/_split/style.module.css
@@ -1,7 +1,7 @@
 .c {
     display: flex;
     flex-direction: column;
-    max-height: 50rem;
+    max-height: 70rem;
     width: 100%;
     gap: 1rem;
     margin-top: 4rem;
@@ -28,7 +28,7 @@
 .body {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
     justify-content: center;
     width: 100%;
     height: 100%;
@@ -79,7 +79,7 @@
     overflow: hidden;
     min-height: 20rem;
     width: 100%;
-    max-height: 30rem;
+    max-height: 40rem;
 }
 .image {
     height: 100%;
@@ -89,10 +89,10 @@
     position: absolute;
     inset: 0px;
 }
-.video video {
+.video > video {
     height: 100%;
     width: 100%;
-    object-fit: cover !important;
+    object-fit: cover;
     object-position: center;
     position: absolute;
     inset: 0px;
@@ -127,7 +127,6 @@
         padding-right: 2rem !important;
         padding-left: 2rem !important;
         padding-top: 2rem;
-        padding-bottom: 0rem;
         align-items: center !important;
         text-align: center !important;
     }
