--- a/src/components/common/VideoPlayer/style.module.css
+++ b/src/components/common/VideoPlayer/style.module.css
@@ -9,7 +9,7 @@
     transition: all 500ms linear;
 }
 
-:not(:root):fullscreen {
+.v:fullscreen {
     object-fit: contain;
     background-color: hsl(var(--primary-hue), 50%, 2.5%);
 }
