--- a/src/app/(main)/home/_intro/style.module.css
+++ b/src/app/(main)/home/_intro/style.module.css
@@ -3,13 +3,14 @@
     flex-direction: column;
     width: 100%;
 
-    height: 80vh;
+    height: 200vh;
     position: relative;
     align-items: center;
     justify-content: center;
 
     overflow: hidden;
     padding: 0rem;
+    z-index: 1;
 }
 .hero {
     position: relative;
@@ -21,6 +22,22 @@
     justify-content: center;
     border-radius: 0rem;
     overflow: hidden;
+}
+.topDrawer {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 1;
+    background-color: hsl(var(--primary-hue), 100%, 2.5%);
+}
+.bottomDrawer {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
+    z-index: 1;
+    background-color: hsl(var(--primary-hue), 100%, 2.5%);
 }
 
 .video {
@@ -34,16 +51,18 @@
 .video video {
     object-fit: cover;
     z-index: 0;
+    position: fixed;
 }
 .center {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
     z-index: 5;
-    position: absolute;
+    position: fixed;
     left: 50%;
     top: 50%;
     translate: -50% -50%;
+    z-index: 0;
 }
 .bl {
     display: flex;
@@ -64,11 +83,4 @@
     max-width: 90vw;
     aspect-ratio: 3/1;
     height: auto;
-}
-
-@media screen and (max-width: 700px) {
-    .c {
-        height: 100vh;
-        max-height: 50rem;
-    }
 }
