--- a/src/components/layout/PrimaryNavigation/nav.module.css
+++ b/src/components/layout/PrimaryNavigation/nav.module.css
@@ -1,10 +1,10 @@
 .nav {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 2rem;
     align-items: center;
     font-size: 1rem;
-    padding: .25em 1em;
+    padding: 1em 1.5em;
     z-index: 100;
     position: fixed;
     top: 0px;
@@ -12,13 +12,25 @@
     right: 0px;
     color: white;
 }
+.login {
+    padding: 0.5rem 1.5rem;
+    border-radius: 1rem;
+    color: hsl(var(--primary-hue), 25%, 5%);
+    font-weight: 600;
+    background-color: hsl(50, 100%, 50%);
+    grid-column-start: 2;
+    align-items: flex-end;
+}
+.login:hover {
+    box-shadow: 0px 0px 1rem 0rem hsl(50, 50%, 25%);
+}
 .nav > *:last-child {
     margin-left: auto;
 }
 .nav .logo {
     color: var(--white-900);
     display: flex;
-    text-align: center;
+    text-align: flex-end;
     align-items: center;
     justify-content: center;
     font-size: 2.5rem !important;
