--- a/src/app/(main)/home/_intro/style.module.css
+++ b/src/app/(main)/home/_intro/style.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100%;
 
-    height: 200vh;
+    height: 300vh;
     position: relative;
     align-items: center;
     justify-content: center;
@@ -29,7 +29,7 @@
     left: 0px;
     right: 0px;
     z-index: 1;
-    background-color: hsl(var(--primary-hue), 100%, 2.5%);
+    background-color: hsl(var(--primary-hue), 50%, 2.5%);
 }
 .bottomDrawer {
     position: fixed;
@@ -37,7 +37,7 @@
     left: 0px;
     right: 0px;
     z-index: 1;
-    background-color: hsl(var(--primary-hue), 100%, 2.5%);
+    background-color: hsl(var(--primary-hue), 50%, 2.5%);
 }
 
 .video {
@@ -52,6 +52,9 @@
     object-fit: cover;
     z-index: 0;
     position: fixed;
+    top:  50%;
+    left: 50%;
+    translate: -50% -50%;
 }
 .center {
     display: flex;
