--- a/src/app/(main)/prosjekt/dbl/watch/page.module.css
+++ b/src/app/(main)/prosjekt/dbl/watch/page.module.css
@@ -8,6 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: hsl(var(--hue), 75%, 75%);
 }
 .c video {
     width: 100%;
