--- a/src/app/(main)/home/_split/style.module.css
+++ b/src/app/(main)/home/_split/style.module.css
@@ -80,6 +80,12 @@
     min-height: 20rem;
     width: 100%;
     max-height: 40rem;
+    
+    transition: scale;
+    transition-duration: 125ms;
+}
+.media:hover {
+    scale: 1.025;
 }
 .image {
     height: 100%;
